styles/globals.scss
@import "colors";

html,
body {
  padding: 0;
  margin: 0;
  font-family: var(--jost-font), -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  background: var(--white-color);
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  font-family: var(--jost-font), sans-serif;
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

